# HFT_Rust

./: Cargo.toml  DEPLOY.md  DEPLOY_GUIDE_RU.md  MECHANICS.md  README.md  check_balance.py  deploy.ps1  patch_main.py  run_v2.ps1  verify_deployment.ps1
.agent/: architecture.md  rules.md  workflow.md
.agent/rules/: hft.md
.agent/workflows/: implementationhft.md
deploy/: setup_khabarovsk.sh  setup_tokyo.sh
src/: README.md  main.rs
src/auth/: README.md  signer.rs
src/core/: README.md  mod.rs  parser.rs
src/ipc/: ring_buffer.rs
src/net/: framing.rs  mod.rs  tcp_opt.rs  tls_client.rs  ws_client.rs
src/strategy/: README.md  market_maker.rs  mod.rs
src_backup_local/: main.rs
src_backup_local/auth/: signer.rs
src_backup_local/core/: README.md  bench_parser.rs  mod.rs  orderbook.rs  parser.rs  serializer.rs
src_backup_local/ipc/: README.md  mod.rs
src_backup_local/net/: README.md  tcp_opt.rs  tls_client.rs  ws_client.rs
src_backup_local/strategy/: README.md  book_manager.rs  market_maker.rs  mod.rs  risk.rs  signal.rs
