[package]
name = "hft_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
mio = { version = "0.8", features = ["os-poll", "net"] }
simd-json = "0.13"
serde = { version = "1.0", features = ["derive"] }
rtrb = "0.3"
core_affinity = "0.8"
socket2 = "0.5"
log = "0.4"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "logging", "tls12"] } 
webpki-roots = "0.26"
ring = "0.17"
ryu = "1.0" 
itoa = "1.0"
hex = "0.4"
dotenv = "0.15"
ureq = { version = "2.10", features = ["json"] }

